fixed scrollbar messing up with container

--- a/musicapp/static/css/main.css
+++ b/musicapp/static/css/main.css
@@ -35,8 +35,8 @@ header h1.logo:hover {
   
 .container {
   min-width: 1000px;
-  max-width: 1200px;
-  width: 80%;
+  max-width: 1300px;
+  width: 85%;
   margin: 0 auto;
 }
 
